# Tento

./: .gitignore  todolist.md
app/: .env  Cargo.toml  diesel.toml
app/lib/core/: .env  Cargo.toml  communication_code.txt
app/lib/core/migrations/00000000000000_diesel_initial_setup/: down.sql
app/lib/core/migrations/2021-01-07-000001_common/: down.sql  up.sql
app/lib/core/src/: mod.rs
app/lib/core/src/dto/: mod.rs
app/lib/core/src/entity/entity/: mod.rs
app/lib/core/src/error/: error_code_for_communication.txt  mod.rs
app/lib/core/src/handler/: mod.rs
app/lib/core/src/utility/: mod.rs
app/lib/mem_is_main/: Cargo.toml  diesel.toml
app/lib/mem_is_main/migrations/2021-01-07-000001_common/: down.sql
app/lib/mem_is_main/src/: lib.rs
app/lib/mem_is_main/src/entity/: mod.rs
app/lib/mem_is_main_derive/: Cargo.toml
app/lib/mem_is_main_derive/src/: lib.rs
app/migrations/2021-01-07-000001_common/: up.sql
app/migrations/2021-01-07-143718_common/: down.sql  up.sql
app/src/: lib.rs
app/src/actix_web_component/request_handler/: mod.rs
app/src/diesel_component/: mod.rs
app/src/diesel_component/migrations/2021-01-07-143718_common/: up.sql
app/src/diesel_component/schema/: mod.rs
app/src/diesel_framework_component/: schema.rs
app/src/dto/: mod.rs
app/src/entity/core/: mod.rs
app/src/entity/core/date_time/: mod.rs
app/src/entity/core/device_id/: mod.rs
app/src/entity/core/uuid_v4/: mod.rs
app/src/entity/entity/: mod.rs
app/src/entity/entity/app_user/: mod.rs
app/src/entity/entity/application_user/: mod.rs
app/src/service/entity/entity/: mod.rs
application/: Cargo.toml  readme.md  rust-toolchain.toml  rustfmt.toml
application/application/: Cargo.toml  environment.example.toml  readme.md  rust-toolchain.toml  rustfmt.toml  todolist.md
application/application/environment/: run_server.example.toml
application/application/environment_configuration/: environment.example.toml
application/application/environment_configuration/development/: environment.toml
application/application/environment_configuration/local_development/: environment.toml
application/application/extern_crate/: mod.rs
application/application/integration_module/: Cargo.toml  mod.rs
application/application/integration_module/test_build_DELETE/aarch64-apple-ios/: libintegration_module.d
application/application/integration_module/test_build_DELETE/aarch64-apple-ios-sim/: libintegration_module.d
application/application/integration_module/test_build_DELETE/armv7-linux-androideabi/: libintegration_module.d
application/application/source/: Cargo.toml  build.rs  c_bindings.h  mod.rs
application/application/source/build_script/: mod.rs
application/application/source/dedicated/: Cargo.toml
application/application/source/dedicated/source/: user_access_refresh_token_encoded.rs
application/application/source/dedicated_crate/: Cargo.toml
application/application/source/dedicated_crate/source/: mod.rs  unified_report.rs  user_access_token_encoded.rs
application/application/source/environment_configuration/: environment.example.toml
application/application/source/extern_crate/: Cargo.toml  mod.rs
application/application/source/extern_crate/build_script_constant/: mod.rs
application/application/source/extern_crate/environment_configuration/: Cargo.toml  mod.rs
application/application/source/forced_crate/: Cargo.toml
application/application/source/forced_crate/action_processor_incoming_outcoming/: Cargo.toml
application/application/source/forced_crate/aggregate_error/: Cargo.toml
application/application/source/integration_module/: Cargo.toml  mod.rs
application/application/source/macro_rules/: mod.rs
application/application/source/source/: mod.rs
application/binary/: Cargo.toml
application/binary/core/: Cargo.toml
application/binary/core/source/: postgres_fixtures.rs  web_main.rs
application/binary/source/web_main/: mod.rs
application/core/source/: Cargo.toml  readme.md  todolist.md
application/core/source/environment/: create_fixtures.example.toml  resolve_incomplite_state.example.toml  run_server.example.toml
application/core/source/source/: build.rs  mod.rs
application/dedicated/: Cargo.toml
application/dedicated/source/: bit_code_serializer.rs  channel_publication1_commentary_token_signed.rs  channel_publication1_token_signed.rs  channel_subscription_token_encoded.rs  channel_subscription_token_hashed.rs  channel_subscription_token_signed.rs  channel_token_hashed.rs  channel_token_signed.rs  common_precedent.rs  macro_rules.rs  mod.rs  unified_report.rs  user_access_refresh_token_signed.rs  user_access_token_encoded.rs  user_access_token_signed.rs  void.rs
application/dedicated/source/action_processor_incoming_outcoming/: mod.rs
application/dedicated/source/entity/: mod.rs
application/foreign_function_interface/client_server_data_serializer/: compile_for_targets.sh
application/foreign_function_interface/client_server_data_serializer/source/: Cargo.toml
application/foreign_function_interface/client_server_data_serializer/target_/: c_bindings.h
application/migration/clickhouse/database_1/: 00000000000001_channel_publication_mark.sql  00000000000002_channel_summed_quantities.sql
application/source/: Cargo.toml  dev.env  diesel.toml
application/source/source/: mod.rs
application/source/source/domain_layer/: mod.rs
application/source/source/infrastructure_layer/: mod.rs
application/source/source/presentation_layer/: mod.rs
project/application/: Cargo.toml  clippy.toml  rustfmt.toml
project/application/.cargo/: config.toml
project/application/extern_crate/: Cargo.toml  mod.rs
project/application/macro_rules/: mod.rs
project/application/mcaro_rules/: Cargo.toml
project/application/procedural_macros/: Cargo.toml  mod.rs
project/application/source/: Cargo.toml  lib.rs  mod.rs
project/application/source/_code_optimization/: mod.rs
project/application/source/domain_layer/: mod.rs
project/application/source/infrastructure_layer/: mod.rs
project/application/source/presentation_layer/: mod.rs
(+2901 files in other folders)
