[package]
name = "mem_is"
version = "0.1.0"
authors = ["zda"]
edition = "2018"

[[bin]]
name = "web_main_bin"
path = "./bin/web_main.rs"

[[bin]]
name = "postgres_fixtures_bin"
path = "./bin/postgres_fixtures.rs"

[lib]
name = "self_"
path = "./src/lib.rs"

[dependencies]
actix-web = { version = "3.3.2" }
base64 = { version = "0.13.0" }
chrono = { version = "0.4.19" }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "chrono"] }
hex = { version = "0.4.2" }
maybe-owned = { version = "0.3.4", features = ["serde"] }
rust-crypto = { version = "0.2.36" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8.1", features = ["v4", "v1"] }