[workspace]
resolver = "2"
members = [
    "./integration_module",
    "./source",
    "./source/extern_crate",
    "./source/macro_rules",
    "./source/source/presentation_layer/functionality/command/create_fixtures",
    "./source/source/presentation_layer/functionality/command/remove_incomplite_state",
    "./source/source/presentation_layer/functionality/command/run_server"
]
default-members = [
    "./integration_module",
    "./source",
    "./source/extern_crate",
    "./source/macro_rules",
    "./source/source/presentation_layer/functionality/command/create_fixtures",
    "./source/source/presentation_layer/functionality/command/remove_incomplite_state",
    "./source/source/presentation_layer/functionality/command/run_server"
]

[workspace.package]
authors = ["Zimin Dmitriy <dimazimin96@yandex.ru>"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release]
opt-level = 3       # TODO  3 can be slawer than 2  https://doc.rust-lang.org/cargo/reference/profiles.html  https://doc.rust-lang.org/rustc/profile-guided-optimization.html
debug = false
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[profile.release.build-override]
opt-level = 3
codegen-units = 16