[workspace]
resolver = "2"
members = [
    "./source",
    "./source/forced_crate/action_processor_incoming_outcoming",
    "./source/forced_crate/build_script_constant",
    "./source/forced_crate/common_precedent",
    "./source/forced_crate/entity",
    "./source/forced_crate/environment_configuration",
    "./source/forced_crate/error_auditor",
    "./source/forced_crate/formatter",
    "./source/forced_crate/macro_rules",
    "./source/forced_crate/message_pack_serializer",
    "./source/forced_crate/unified_report",
    "./source/forced_crate/void",
    "./source/source/presentation_layer/functionality/command/core",
]
default-members = [
    "./source",
    "./source/forced_crate/action_processor_incoming_outcoming",
    "./source/forced_crate/build_script_constant",
    "./source/forced_crate/common_precedent",
    "./source/forced_crate/entity",
    "./source/forced_crate/environment_configuration",
    "./source/forced_crate/error_auditor",
    "./source/forced_crate/formatter",
    "./source/forced_crate/macro_rules",
    "./source/forced_crate/message_pack_serializer",
    "./source/forced_crate/unified_report",
    "./source/forced_crate/void",
    "./source/source/presentation_layer/functionality/command/core",
]

[workspace.package]
authors = ["Zimin Dmitriy <dimazimin96@yandex.ru>"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release]
opt-level = 3       # TODO  3 can be slawer than 2  https://doc.rust-lang.org/cargo/reference/profiles.html  https://doc.rust-lang.org/rustc/profile-guided-optimization.html
debug = false
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[profile.release.build-override]
opt-level = 3
codegen-units = 16