[package]
name = "core_binary"
version = "0.1.0"
authors = ["zda"]
edition = "2018"

[[bin]]
name = "binary_web_main"
path = "./source/presentation_layer/web_main/mod.rs"

[dependencies]
actix-web = {version = "3.3.2"}
library = {path = "./../library", version = "0.1.0"}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3