[package]
name = "dedicated"
version = "1.0.0"
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[lib]
name = "dedicated"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
crate-type = ["lib"]
required-features = []

[lints]
workspace = true

[dependencies]
bitcode = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde_for_manual_test = [
    "dep:serde",
]