[package]
name = "integration_module"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "integration_module"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[dependencies]
application = { path = "./../source", package = "application", version = "0.1.0", default-features = true, features = [], optional = false }