[package]
name = "application"
version = "1.0.0"
authors.workspace = true
edition = "2021"
build = "./build.rs"

[lib]
name = "application"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
action_processor_incoming_outcoming = { path = "./forced_crate/action_processor_incoming_outcoming", package = "action_processor_incoming_outcoming", version = "1.0.0", default-features = true, features = [], optional = false }
aggregate_error = { path = "./forced_crate/aggregate_error", package = "aggregate_error", version = "1.0.0", default-features = true, features = [], optional = false }
argon2 = { package = "rust-argon2", version = "0.8.3", default-features = true, features = [], optional = false }
base64 = { package = "base64", version = "0.13.1", default-features = true, features = [], optional = false }
bb8 = { package = "bb8", version = "0.7.1", default-features = true, features = [], optional = false }
bb8_postgres = { package = "bb8-postgres", version = "0.7.0", default-features = true, features = [], optional = false }
bytes = { package = "bytes", version = "1.1.0", default-features = true, features = [], optional = false }
chrono = { package = "chrono", version = "0.4.31", default-features = true, features = [], optional = false }
formatter = { path = "./forced_crate/formatter", package = "formatter", version = "1.0.0", default-features = true, features = [], optional = false }
hmac = { package = "hmac", version = "0.12.1", default-features = true, features = [], optional = false }
http = { package = "http", version = "0.2.9", default-features = true, features = [], optional = false }
hyper = { package = "hyper", version = "0.14.27", default-features = true, features = ["full"], optional = false }
lettre = { package = "lettre", version = "0.9.6", default-features = true, features = [], optional = false }
lettre_email = { package = "lettre_email", version = "0.9.4", default-features = true, features = [], optional = false }
matchit = { package = "matchit", version = "0.7.3", default-features = true, features = [], optional = false }
message_pack_serializer = { path = "./forced_crate/message_pack_serializer", package = "message_pack_serializer", version = "1.0.0", default-features = true, features = [], optional = false }
rand = { package = "rand", version = "0.8.5", default-features = true, features = [], optional = false }
regex = { package = "regex", version = "1.4.6", default-features = true, features = [], optional = false }
serde = { package = "serde", version = "1.0.188", default-features = true, features = ["derive"], optional = false }
sha3 = { package = "sha2", version = "0.10.8", default-features = true, features = [], optional = false }
tokio = { package = "tokio", version = "1.16.1", default-features = true, features = ["full"], optional = false }
tokio_postgres = { package = "tokio-postgres", version = "0.7.10", default-features = true, features = [], optional = false }
toml = { package = "toml", version = "0.7.4", default-features = true, features = [], optional = false }
tracing = { package = "tracing", version = "0.1.40", default-features = true, features = [], optional = false }
tracing-appender = { package = "tracing-appender", version = "0.2.2", default-features = true, features = [], optional = false }
tracing-subscriber = { package = "tracing-subscriber", version = "0.3.17", default-features = true, features = [], optional = false }
unified_report = { path = "./forced_crate/unified_report", package = "unified_report", version = "1.0.0", default-features = true, features = [], optional = false }
uuid = { package = "uuid", version = "0.8.2", default-features = true, features = ["v4"], optional = false }
void = { path = "./forced_crate/void", package = "void", version = "1.0.0", default-features = true, features = [], optional = false }

const_format = { package = "const_format", version = "0.2.31", default-features = true, features = [], optional = true }
serde_json = { package = "serde_json", version = "1.0.107", default-features = true, features = [], optional = true }

[build-dependencies]
cargo-emit = { package = "cargo-emit", version = "0.2.1", default-features = true, features = [], optional = false }
uuid = { package = "uuid", version = "0.8.2", default-features = true, features = ["v4"], optional = false }

[features]
default = []
file_log  = []
manual_testing = [
    "const_format",
    "serde_json",
]