[package]
name = "core_binary"
version = "0.1.0"
authors = ["zda"]
edition = "2018"

[[bin]]
name = "core_binary_web_main"
path = "./source/web_main.rs"

[[bin]]
name = "core_binary_postgres_fixtures"
path = "./source/postgres_fixtures.rs"

[dependencies]
actix-web = { version = "3.3.2" }
core_library = { path = "./../../library/core", version = "0.1.0" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3