[[bin]]
name = "core"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "core"
version = "1.0.0"
authors.workspace = true
rust-version.workspace = true
edition = "2021"
build = "./source/build.rs"

[lints]
workspace = true

[dependencies]
argon2 = { package = "argon2", version = "=0.5.3", default-features = true, features = ["std"], optional = false }
base64 = { package = "base64", version = "=0.22.1", default-features = true, features = [], optional = false }
bitcode = { workspace = true }
bytes = { package = "bytes", version = "=1.7.1", default-features = true, features = [], optional = false }
chrono = { package = "chrono", version = "=0.4.38", default-features = true, features = [], optional = false }
clap = { package = "clap", version = "=4.5.17", default-features = true, features = ["cargo"], optional = false }
const_format = { package = "const_format", version = "=0.2.33", default-features = true, features = [], optional = true }
deadpool = { package = "deadpool", version = "=0.12.1", default-features = true, features = ["rt_tokio_1"], optional = false }
deadpool_postgres = { package = "deadpool-postgres", version = "=0.14.0", default-features = true, features = ["rt_tokio_1"], optional = false }
dedicated = { workspace = true }
highway = { package = "highway", version = "=1.3.0", default-features = true, features = [], optional = false }
hmac = { package = "hmac", version = "=0.12.1", default-features = true, features = [], optional = false }
http = { package = "http", version = "=1.1.0", default-features = true, features = [], optional = false }
http-body-util = { package = "http-body-util", version = "=0.1.2", default-features = true, features = [], optional = false }
hyper = { package = "hyper", version = "=1.4.1", default-features = true, features = ["full"], optional = false }
hyper_util = { package = "hyper-util", version = "=0.1.8", default-features = true, features = ["full"], optional = false }
lettre = { package = "lettre", version = "=0.11.9", default-features = false, features = ["smtp-transport", "hostname", "builder", "tokio1"], optional = false }
matchit = { package = "matchit", version = "=0.8.4", default-features = true, features = [], optional = false }
num_integer = { package = "num-integer", version = "=0.1.46", default-features = true, features = [], optional = false }
rand = { package = "rand", version = "=0.8.5", default-features = true, features = [], optional = false }
regex = { package = "regex", version = "=1.10.6", default-features = true, features = [], optional = false }
serde = { workspace = true }
serde_json = { package = "serde_json", version = "=1.0.128", default-features = true, features = [], optional = true }
sha3 = { package = "sha3", version = "=0.10.8", default-features = true, features = [], optional = false }
tokio = { package = "tokio", version = "=1.40.0", default-features = true, features = ["full"], optional = false }
tokio_postgres = { package = "tokio-postgres", version = "=0.7.12", default-features = true, features = [], optional = false }
toml = { package = "toml", version = "=0.8.19", default-features = true, features = [], optional = false }
tracing = { package = "tracing", version = "=0.1.40", default-features = true, features = [], optional = false }
tracing_appender = { package = "tracing-appender", version = "=0.2.3", default-features = true, features = [], optional = false }
tracing_subscriber = { package = "tracing-subscriber", version = "=0.3.18", default-features = true, features = [], optional = false }
uuid = { workspace = true }

[build-dependencies]
cargo-emit = { workspace = true }
uuid = { workspace = true }

[features]
default = []
logging_to_file = []
postgresql_connection_with_tls = []
serde_for_manual_test = [
    "dedicated/serde_for_manual_test",
]
json_for_manual_test = [
    "dep:serde_json",
    "serde_for_manual_test",
]
action_for_manual_test = [
    "dep:const_format",
    "json_for_manual_test",
]
port_for_manual_test = [
    "action_for_manual_test"
]