[package]
name = "extern_crate"
version = "1.0.0"
authors.workspace = true
edition = "2021"

[lib]
name = "extern_crate"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]         #  TODO  TODO TODO TODO Разобарться, где нужны default фичи
argon2 = { package = "rust-argon2", version = "^0.8", default-features = true, features = [], optional = false }
base64 = { package = "base64", version = "^0.13", default-features = true, features = [], optional = false }
bb8 = { package = "bb8", version = "^0.7", default-features = true, features = [], optional = false }
bb8_postgres = { package = "bb8-postgres", version = "^0.7", default-features = true, features = [], optional = false }
bb8_redis = { package = "bb8-redis", version = "^0.10", default-features = true, features = [], optional = false }
bytes = { package = "bytes", version = "^1.1", default-features = true, features = [], optional = false }
chrono = { package = "chrono", version = "^0.4", default-features = true, features = [], optional = false }
crypto = { package = "rust-crypto", version = "^0.2", default-features = true, features = [], optional = false }
dotenv = { package = "dotenv", version = "^0.15", default-features = true, features = [], optional = false }
http = { package = "http", version = "^0.2", default-features = true, features = [], optional = false }
hyper = { package = "hyper", version = "^0.14", default-features = true, features = ["full"], optional = false }  # // TODO Убрать фичу Full и понять , какие нужны
lettre = { package = "lettre", version = "^0.9", default-features = true, features = [], optional = false }
lettre_email = { package = "lettre_email", version = "^0.9", default-features = true, features = [], optional = false }
rand = { package = "rand", version = "0.8.5", default-features = true, features = [], optional = false }
redis = { package = "redis", version = "^0.21", default-features = true, features = ["tokio-comp", "tokio-native-tls-comp"], optional = false }
regex = { package = "regex", version = "^1.4", default-features = true, features = [], optional = false }
rmp_serde = { package = "rmp-serde", version = "^0.15", default-features = true, features = [], optional = false }
serde = { package = "serde", version = "^1.0", default-features = true, features = ["derive"], optional = false }
tokio = { package = "tokio", version = "^1.16", default-features = true, features = ["full"], optional = false }  # // TODO Убрать фичу Full и понять , какие нужны
tokio_postgres = { package = "tokio-postgres", version = "^0.7", default-features = true, features = [], optional = false }
toml = { package = "toml", version = "0.7.4", default-features = true, features = [], optional = false }
uuid = { package = "uuid", version = "^0.8", default-features = true, features = ["v4"], optional = false }
macro_rules = { path = "./../macro_rules", package = "macro_rules", version = "1.0.0", default-features = true, features = [], optional = false }

const_format = { package = "const_format", version = "0.2.30", default-features = true, features = [], optional = true }
serde_json = { package = "serde_json", version = "^1.0", default-features = true, features = [], optional = true }

[features]
default = []
manual_testing = [
    "const_format",
    "serde_json"
]